[package]
name = "terrain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20.0"
bracket-noise = "0.8.7"
image = { version = "0.24.5", default-features = false, features = ["png", "rgb"] }
log = "0.4.17"
rand = { version = "0.8.5", features = ["std_rng"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "0.2.0"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.8", features = ["js"] }
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = [
  "Document",
  "Element",
  "HtmlElement",
  "HtmlTableElement",
  "Node",
  "Window",
]}

[profile.release]
opt-level = "s"
